Add Domain and ClientId

--- a/Auth0/appsettings.json
+++ b/Auth0/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Auth0": {
+    "Domain": "dev-tkxec62yv3vo4l71.us.auth0.com",
+    "ClientId": "uAmbegtmJvcb1nH7kVRoCwsEBDVTQOoX"
+  },
   "AllowedHosts": "*"
 }
